// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly 1`] = `
<div
  data-testid="button"
>
  <button
    class="l-btn l-btn-default l-btn-md"
    type="button"
  >
    <span>
      default
    </span>
  </button>
  <button
    class="l-btn l-btn-primary l-btn-md"
    type="button"
  >
    <span>
      primary
    </span>
  </button>
  <button
    class="l-btn l-btn-info l-btn-md"
    type="button"
  >
    <span>
      info
    </span>
  </button>
  <button
    class="l-btn l-btn-warning l-btn-md"
    type="button"
  >
    <span>
      warning
    </span>
  </button>
  <button
    class="l-btn l-btn-danger l-btn-md"
    type="button"
  >
    <span>
      danger
    </span>
  </button>
  <button
    class="l-btn l-btn-dashed l-btn-md"
    type="button"
  >
    <span>
      dashed
    </span>
  </button>
  <button
    class="l-btn l-btn-text l-btn-md"
    type="button"
  >
    <span>
      text
    </span>
  </button>
</div>
`;

exports[`Button should render different sizes correctly 1`] = `
<div
  data-testid="button_size"
>
  <button
    class="l-btn l-btn-primary l-btn-lg"
    type="button"
  >
    <span>
      lg
    </span>
  </button>
  <button
    class="l-btn l-btn-primary l-btn-md"
    type="button"
  >
    <span>
      md
    </span>
  </button>
  <button
    class="l-btn l-btn-primary l-btn-sm"
    type="button"
  >
    <span>
      sm
    </span>
  </button>
</div>
`;
